--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -44,7 +44,7 @@ nav a {
     height: 4rem;
   }
   .iconMain {
-    width: 45vw;
+    width: 40vw;
   }
   header button {
     display: none;
